Review of page content for SIS 1.1.